tests/specs/ecosystem/std/testing/0_206_0.test
std/testing/0.206.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.206.0": "jsr:@std/assert@0.206.0",
      "jsr:@std/async@^0.206.0": "jsr:@std/async@0.206.0",
      "jsr:@std/fmt@^0.206.0": "jsr:@std/fmt@0.206.0"
    },
    "jsr": {
      "@std/assert@0.206.0": {
        "integrity": "9e3e4e1ae03bd154d5732afe7da88897f3b6a1f2b919b5bbea579c905d1a7054",
        "dependencies": [
          "jsr:@std/fmt@^0.206.0"
        ]
      },
      "@std/async@0.206.0": {
        "integrity": "0c6121778e2fcd112d84ebc0b877cb379535da6ba6f1b787c6fb290fcc4a4817"
      },
      "@std/fmt@0.206.0": {
        "integrity": "e068d8327cf477f7d67f5a04d2ff8ef0fa314b4d06f98395b4e802963f18f436"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


